--- a/deployment.yaml
+++ b/deployment.yaml
@@ -13,6 +13,12 @@ spec:
       containers:
         - name: gohello
           image: "elektromin/gohello:0.1"
+          env:
+            - name: NEARBYSTOPS_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: environment
+                  key: NEARBYSTOPS_KEY
           ports:
             - name: http
               containerPort: 8080
